# pokemon-cards

./: .dockerignore  .env.example  .gitignore  BRANCH.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
docs/: architecture.md  backup-restore.md  data-refresh.md  deployment-readiness.md  economics.md  market-study.md  ml-model-study.md
ml/: .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
ml/cardscope_ml/: __init__.py  augment.py  benchmark.py  calibration.py  cli.py  dataset.py  dry_run.py  errors.py  export.py  hard_negatives.py  index.py  inference.py  metrics.py  model.py  report.py  rights.py  split.py  train.py
ml/schemas/: benchmark-report.schema.json  rights-manifest.schema.json
ml/scripts/: benchmark.py  build_reference_index.py  export_onnx.py  train.py
ml/tests/: conftest.py  test_augment.py  test_calibration.py  test_dry_run.py  test_metrics.py  test_report.py  test_rights_manifest.py  test_split.py
ml/tests/fixtures/: dry_run_scores.json  rights_manifest.json
public/: manifest.webmanifest  sw.js
scripts/: acquire-noncommercial-pilot.ts  economics-model.ts  noncommercial-pilot-lib.ts  prepare-ocr-assets.mjs  prepare-recognition-assets.mjs  simulate-economics.ts
server/: app.ts  auth.ts  config.ts  index.ts  recognition.ts  shutdown.ts  store.ts
shared/: card-text.ts  collection-event-schema.ts  types.ts
spec/: SPEC_EVOL_ACCOUNT_CENTRAL_SCAN_UX.md  (+6 more)
src/: App.svelte  (+1 more)
(+64 files in other folders)
